--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,28 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">The Internet Herokuapp E2E Test</th></tr>
-<tr><td><a href="#t0">Add/Remove Buttons</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">31,406</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Dynamic Content Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">41,627</td><td></td><td></td></tr>
-<tr><td><a href="#t2">Context Menu Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,582</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t3">Login Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">20,997</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">11</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">105,612</th><th colspan="2"></th></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">172,938</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">The Internet Herokuapp E2E Test</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Add/Remove Buttons &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">elementSuite.AddRemoveTest</td><td><a href="#m0">exclusion</a></td><td rowspan="1">1616491921788</td><td rowspan="1">15607</td></tr><tr class="passedeven"><td><a href="#m1">inclusion</a></td><td rowspan="1">1616491943429</td><td rowspan="1">446</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Dynamic Content Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">elementSuite.DynamicContentTest</td><td><a href="#m2">addCheckBox</a></td><td rowspan="1">1616491949879</td><td rowspan="1">6977</td></tr><tr class="passedeven"><td><a href="#m3">disableInputField</a></td><td rowspan="1">1616491961502</td><td rowspan="1">6815</td></tr><tr class="passedeven"><td><a href="#m4">enableInputField</a></td><td rowspan="1">1616491973243</td><td rowspan="1">3780</td></tr><tr class="passedeven"><td><a href="#m5">removeCheckBox</a></td><td rowspan="1">1616491981709</td><td rowspan="1">3857</td></tr></tbody>
-<tbody id="t2"><tr><th colspan="4">Context Menu Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">elementSuite.ContextMenuTest</td><td><a href="#m6">alert</a></td><td rowspan="1">1616491991501</td><td rowspan="1">550</td></tr><tr class="passedeven"><td><a href="#m7">contextClick</a></td><td rowspan="1">1616491996624</td><td rowspan="1">521</td></tr></tbody>
-<tbody id="t3"><tr><th colspan="4">Login Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">elementSuite.LoginTest</td><td><a href="#m8">loginFullCreds</a></td><td rowspan="1">1616492003017</td><td rowspan="1">1538</td></tr><tr class="passedeven"><td><a href="#m9">loginWrongPassword</a></td><td rowspan="1">1616492010469</td><td rowspan="1">1574</td></tr><tr class="passedeven"><td><a href="#m10">loginWrongUserName</a></td><td rowspan="1">1616492016644</td><td rowspan="1">1470</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">cucumberOptions.TestRunner</td><td><a href="#m0">feature</a></td><td rowspan="1">1616835335214</td><td rowspan="1">172338</td></tr></tbody>
 </table>
-<h2>Add/Remove Buttons</h2><h3 id="m0">elementSuite.AddRemoveTest#exclusion</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">elementSuite.AddRemoveTest#inclusion</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Dynamic Content Test</h2><h3 id="m2">elementSuite.DynamicContentTest#addCheckBox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">elementSuite.DynamicContentTest#disableInputField</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">elementSuite.DynamicContentTest#enableInputField</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">elementSuite.DynamicContentTest#removeCheckBox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Context Menu Test</h2><h3 id="m6">elementSuite.ContextMenuTest#alert</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">elementSuite.ContextMenuTest#contextClick</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Login Test</h2><h3 id="m8">elementSuite.LoginTest#loginFullCreds</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">elementSuite.LoginTest#loginWrongPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m10">elementSuite.LoginTest#loginWrongUserName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">cucumberOptions.TestRunner#feature</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>WebApp Login</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
