--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ea97a2">  <td>21/03/22 16:11:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContextMenuTest.alert()[pri:0, instance:elementSuite.ContextMenuTest@2bbf4b8b]">alert</td> 
-  <td>main@265119009</td>   <td></td> </tr>
-<tr bgcolor="ea97a2">  <td>21/03/22 16:11:09</td>   <td>9716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContextMenuTest.browserClose()[pri:0, instance:elementSuite.ContextMenuTest@2bbf4b8b]">&lt;&lt;browserClose</td> 
-<td>&nbsp;</td>  <td>main@265119009</td>   <td></td> </tr>
-<tr bgcolor="ea97a2">  <td>21/03/22 16:11:09</td>   <td>9716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContextMenuTest.browserClose()[pri:0, instance:elementSuite.ContextMenuTest@2bbf4b8b]">&lt;&lt;browserClose</td> 
-<td>&nbsp;</td>  <td>main@265119009</td>   <td></td> </tr>
-<tr bgcolor="ea97a2">  <td>21/03/22 16:11:09</td>   <td>8943</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContextMenuTest.contextClick()[pri:0, instance:elementSuite.ContextMenuTest@2bbf4b8b]">contextClick</td> 
-  <td>main@265119009</td>   <td></td> </tr>
-<tr bgcolor="ea97a2">  <td>21/03/22 16:11:03</td>   <td>3051</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContextMenuTest.initialize()[pri:0, instance:elementSuite.ContextMenuTest@2bbf4b8b]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@265119009</td>   <td></td> </tr>
-<tr bgcolor="ea97a2">  <td>21/03/22 16:11:03</td>   <td>3051</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContextMenuTest.initialize()[pri:0, instance:elementSuite.ContextMenuTest@2bbf4b8b]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@265119009</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>21/03/27 11:55:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:cucumberOptions.TestRunner@5bcea91b]">feature</td> 
+  <td>main@22756955</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>21/03/27 11:55:34</td>   <td>-552</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:cucumberOptions.TestRunner@5bcea91b]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22756955</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>21/03/27 11:58:27</td>   <td>172344</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:cucumberOptions.TestRunner@5bcea91b]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22756955</td>   <td></td> </tr>
 </table>
